# DND-And-Beyond

./: .dockerignore  .env.example  .env.production.example  .gitignore  Caddyfile  DECISIONS.md  Dockerfile  README.md  cloudbuild.github.yaml  cloudbuild.yaml  cloudrun_start.sh  pyproject.toml  rxconfig.py
assets/: styles.css
dnd_and_beyond/: __init__.py  data_access.py  dnd_and_beyond.py  email_service.py  magic_rules.py  models.py  rules_math.py  srd_catalog.py  state.py
dnd_and_beyond/data/: __init__.py  srd_spells_2014.json
reflex.lock/: package-lock.json  package.json
scripts/: build_srd_spell_catalog.py  create_github_build_trigger.ps1  deploy_cloudrun.ps1  purge_app_data.py  seed_srd.py  setup_cloud_secrets.ps1  verify_postgres.py  verify_smtp.py
tests/: test_auth_helpers.py  test_data_access.py  test_magic_rules.py  test_rules_math.py  test_srd_catalog.py  test_state_helpers.py
