[project]
name = "dnd-and-beyond"
version = "0.1.0"
description = "A polished 5e-compatible character, campaign, and DM table app built with Reflex."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "reflex>=0.8.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["dnd_and_beyond*"]
